--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -634,6 +634,10 @@
     .elements h4 {
         font-size: 45px;
     }
+    #content-1 h2 {
+        font-size: 25px;
+        line-height: normal;
+    }
     .bitters h4 {
         font-size: 30px;
     }
@@ -993,6 +997,7 @@
         top: 60%;
         left: -55px;
     }
+
     h5.selection-title-sm-1 {
         top: 55%;
         left: 4%;
