--- a/public/css/style.css
+++ b/public/css/style.css
@@ -243,7 +243,7 @@ ul.topbar-links li {
 span.cart-count {
   position: absolute;
   top: -5px;
-  right: -5px;
+  left: 6px;
   color: #ffffff;
   background: #c31f20;
   min-width: 16px;
@@ -255,6 +255,13 @@ span.cart-count {
   width: max-content;
 }
 
+
+.checkout-form .autocomplete-dropdown-container>div {
+  padding: 7px 10px;
+}
+/* .checkout-form .autocomplete-dropdown-container {
+  padding: 5px 0;
+} */
 /* section.logobar {
     border-bottom: 2px dashed #2B2541;
 } */
@@ -5971,9 +5978,16 @@ span.sale-tag {
   margin-bottom: 20px;
 }
 .product-card a.prod-imgg img{
-    height: 200px;
-    overflow: hidden;
-    min-width: 100%;
+  height: 200px;
+  overflow: hidden;
+  min-width: 100%;
+  /* background: #cccc; */
+  object-fit: contain;
+  /* width: 100%; */
+  /* aspect-ratio: 16/10; */
+  /* object-position: center; */
+  box-shadow: 0 1px 0 0 #ccc;
+
 }
 .wbp_wrapper p{
   font-weight: normal;
